--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
         <dependency>
             <groupId>com.github.Efnilite</groupId>
             <artifactId>neoschematic</artifactId>
-            <version>5bf448901b</version>
+            <version>v1.0.2</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
